# thorCam

./: .gitignore  .gitmodules  README.md
3D_Models/: Tension_Module_v3-v7.f3d
3D_Models/files/: Camera_Adapter_v3.f3d  Case_Passthrough_v4.f3d
Firmware/: CMakeLists.txt  ads1115.c  ads1115.h  hx711.c  hx711.h  l293d.c  l293d.h  main.c  shift_register.h
Firmware/thorCam/: CMakeLists.txt  README.md  ads1115.c  ads1115.h  hx711.c  l293d.c  l293d.h  main.c  movement.c
Firmware/thorCam/Config/: FreeRTOSConfig.h
Firmware/thorCam/include/: hx711.h  movement.h  sensor.h  uart_rx.h
Firmware/thorCam/src/: ads1115.c  hx711.c  l293d.c  movement.c  sensor.c  shift_register.c  uart_rx.c
Firmware/uart_test/: CMakeLists.txt  main.c
Hardware/: #auto_saved_files#  Loadcells_Schematic.kicad_sch  StepperDriver.kicad_sch  ThorPBC2.0-BOTTOM_Cu.gbr  ThorPBC2.0-B_Mask.gbr  ThorPBC2.0-B_Paste.gbr  ThorPBC2.0-B_Silkscreen.gbr  ThorPBC2.0-Edge_Cuts.gbr  ThorPBC2.0-F_Mask.gbr  ThorPBC2.0-F_Paste.gbr  ThorPBC2.0-F_Silkscreen.gbr  ThorPBC2.0-GND_Cu.gbr  ThorPBC2.0-POWER_Cu.gbr  ThorPBC2.0-TOP_Cu.gbr  ThorPBC2.0-job.gbrjob  ThorPBC2.0.kicad_pcb  ThorPBC2.0.kicad_pro  ThorPBC2.0.kicad_sch  fp-lib-table  sym-lib-table  ~ThorPBC2.0.kicad_sch.lck
Hardware/ThorParts/: 2024-10-08_02-19-51.kicad_sym  2024-10-08_02-54-42.kicad_sym  2024-10-08_03-02-35.kicad_sym  2024-10-08_03-09-58.kicad_sym
Hardware/ThorParts/3D Models/: C320C104K5R5TA.step  C330C105K5R5TA7301.STEP  RES_TYCO_YR1_TYC.step
Hardware/ThorParts/footprints.pretty/: ADS1115_1x10_P2.54mm_Vertical.kicad_mod  CAP_C320_KEM.kicad_mod  CAP_C330C_MR_X7R_KEM.kicad_mod  CameraMod.kicad_mod  Molex_Mini-Fit_Jr_5566-24A_2x12_P4.20mm_Vertical_Thor.kicad_mod  RES_TYCO_YR1_TYC.kicad_mod  SIUE_Logo.kicad_mod  SIUE_Logo_large.kicad_mod  SPDT_OS102011_CNK.kicad_mod
Hardware/production/: netlist.ipc
Report/: ece405_final_report.tex
Report/sections/: abstract.tex  index.tex  report copy.tex  report.tex
Report/src/: Memory_System.v  main.c
Software/: README.md  app.py
Software/thor-controller/: README.md  app.py
Software/thor-controller/templates/: index.html
dev/: README.md
legacy/: README.md
legacy/ThorCam/: NewStringBracket.stl  ThorCamCircuit.cddx
legacy/ThorCam/Python Motor Scripts/: cam.py  cameratest.py  imageanalysis.py  motor_test.py  vocal.py
legacy/ThorCam/ThorPCB/: ThorPCB-B_Mask.gbr  ThorPCB-B_Paste.gbr  ThorPCB-Edge_Cuts.gbr  ThorPCB-F_Mask.gbr  ThorPCB-F_Paste.gbr  ThorPCB-NPTH.drl  ThorPCB-POWER.gbr  (+5 more)
legacy/pre-2024/: CE3_CamBracket.gcode  CamBracket.gcode  CamBracket.stl  PI3MK3M_CamBracket.gcode
(+13 files in other folders)
